--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "cms",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.ts",
+    "build": "tsc",
+    "start": "npm run build && node dist/app.js",
+    "format": "prettier --write  src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix"
   },
   "repository": {
     "type": "git",
@@ -17,7 +21,19 @@
     "url": "https://github.com/safia-elnakhal/ClinicMangmentSystem/issues"
   },
   "homepage": "https://github.com/safia-elnakhal/ClinicMangmentSystem#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
-  }
-}
+  },
+  "description": "",
+  "dependencies": {
+    "express": "^4.18.1"
+"
