--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "npm run build && node dist/app.js",
     "format": "prettier --write  src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "start:db": "mongod --dbpath \"./db\""
   },
   "repository": {
     "type": "git",
