--- a/package.json
+++ b/package.json
@@ -1,45 +1,29 @@
 {
-  "name": "clinicmangmentsystem",
+  "name": "cms",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/app.js",
-    "start:db": "mongod --dbpath \"./db\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/safia-elnakhal/ClinicMangmentSystem.git"
+    "dev": "nodemon src/app.ts",
+    "build": "tsc",
+    "start": "npm run build && nodemon dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/safia-elnakhal/ClinicMangmentSystem/issues"
-  },
-  "homepage": "https://github.com/safia-elnakhal/ClinicMangmentSystem#readme",
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.3",
-    "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.4",
-    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
+    "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@types/mongoose": "^5.11.97",
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.4",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4"
   }
 }
