--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/safia-elnakhal/ClinicMangmentSystem#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
@@ -36,7 +38,8 @@
   },
   "description": "",
   "dependencies": {
-    "express": "^4.18.1"
-
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4"
   }
 }
