--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-    "singleQuote": true,
-    "printWidth": 80,
-    "bracketSpacing": true,
-    "semi": false
-  }
+  "singleQuote": true,
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "semi": false,
+  "tabWidth": 4,
+  "endOfLine": "auto"
+}
