--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.4",
     "express": "^4.18.1",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^5.0.3",
