--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "./src/app.js",
     "scripts": {
         "start": "nodemon  ./src/app.ts",
+        "start:quick": "npx ts-node-dev --respawn ./src/app.ts",
         "start:prod": "npm run build && node ./build/app.js",
         "start:db": "mongod --dbpath \"./db\"",
         "build": "npx tsc",
@@ -39,8 +40,8 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.19",
         "prettier": "^2.7.1",
-        "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "tsc-watch": "^5.0.3",
         "typescript": "^4.7.4"
@@ -54,7 +55,6 @@
         "express-validator": "^6.14.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.4.4",
-        "morgan": "^1.10.0",
-        "nodemon": "^2.0.19"
+        "morgan": "^1.10.0"
     }
 }
