--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.0.4",
+        "@types/validator": "^13.7.4",
         "@typescript-eslint/eslint-plugin": "^5.30.7",
         "@typescript-eslint/parser": "^5.30.7",
         "eslint": "^8.20.0",
@@ -55,6 +56,7 @@
         "express-validator": "^6.14.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.4.4",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "validator": "^13.7.0"
     }
 }
