added email module

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,12 @@
+# app data
 PORT=8080
 
-# DB_URL="mongodb://localhost:27017/HomieDB"
+# db data
+DB_URL="mongodb://localhost:27017/CMS-DB"
 DB_HOST="localhost"
 DB_PORT=27017
 DB_NAME="CMS-DB"
+
+# email client data
+ORG_EMAIL = 'best.clinic.in.the.world@gmail.com'
+ORG_EMAIL_PASSWORD = 'lyfkuxonjgyrhite'
